# app-runner

./: Cargo.toml  LICENSE  build.rs
.github/workflows/: rust.yml
.vim/: coc-settings.json
sample/: background.json  build.json  homeapp.json  homepop.json  jswm.json  navi.json  redis.json  weston.json
src/: arun_config.rs  arun_error.rs  arun_main.rs  ctlif.rs  lib.rs  main.rs  runner.rs  utils.rs
src/arun/: arun_config.rs  ctlif.rs  mod.rs  runner.rs
src/arunlib/: lib.rs
